# NavRover

./: .gitignore  README.md  nights_and_weekends_s5.pgm
devel/: .catkin  local_setup.sh
devel/lib/gmapping/: slam_gmapping  slam_gmapping_replay
devel/lib/pkgconfig/: gmapping.pc  navrover_navigation.pc  navrover_simulation.pc
devel/share/gmapping/cmake/: gmappingConfig.cmake
devel/share/navrover_navigation/cmake/: navrover_navigationConfig.cmake
devel/share/navrover_simulation/cmake/: navrover_simulationConfig.cmake
docker/: Dockerfile  README.md  build_docker.sh  entrypoint.sh  run_docker.sh
navrover_control/: CMakeLists.txt  package.xml
navrover_control/config/: navrover_controllers.yaml
navrover_control/description/: ros2_contro.xacro  ros2_control.xacro
navrover_control/src/: stability_controller.cpp
navrover_description/: CMakeLists.txt  package.xml  setup.cfg  setup.py
navrover_description/launch/: display.launch.py  gazebo.launch.py
navrover_description/meshes/: base_link.stl  left_front_motor_1.stl  left_front_wheel_1.stl  left_rear_motor_1.stl  left_rear_wheel_1.stl  left_rocker_arm_1.stl  right_front_motor_1.stl  right_front_wheel_1.stl  right_rear_motor_1.stl  right_rear_wheel_1.stl  right_rocker_arm_1.stl  rover_camera_1.stl
navrover_description/urdf/: materials.xacro  navrover.gazebo  navrover.trans  navrover.xacro  rover.urdf  rover.xacro
navrover_gazebo/: CMakeLists.txt  package.xml  setup.cfg  setup.py
navrover_gazebo/launch/: gazebo.launch  gazebo.launch.py  nights_and_weekends_world.launch
navrover_gazebo/models/enclosure/: model.config  model.sdf
navrover_gazebo/models/first_model/: model.config  model.sdf
navrover_gazebo/models/nights_and_weekends_s5/meshes/: nights_and_weekends_s5.stl
navrover_gazebo/models/teleop_enclosure/: model.config  model.sdf
navrover_gazebo/worlds/: first.world  rtabmap.world  teleop.world
navrover_navigation/: CMakeLists.txt  package.xml
navrover_navigation/config/: DWA_base_local_params.yaml  costmap_common_params.yaml  local_costmap_params.yaml  move_base.yaml  recovery_behaviors.yaml
navrover_navigation/config/octomap_config/: costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  move_base.yaml
navrover_navigation/launch/: amcl.launch  amcl_plus_map_loader.launch  dwa_move_base.launch  map_loader.launch  move_base.launch  navigation.launch  octomap_nav.launch
navrover_navigation/maps/: first_map.pgm  nights_and_weekends_s5.yaml  teleop.pgm  teleop.yaml
navrover_navigation/maps/octomaps/: teleop.bt
navrover_navigation/rviz/: map_viewer.rviz  octomap.rviz
navrover_rtab_package/: CMakeLists.txt
navrover_rtab_package/launch/: rtabmap.launch  rtabmap_2d_nav.launch  rtabmap_mapping.launch
navrover_rtab_package/maps/: rtabmap.pgm
navrover_rtab_package/rviz/: rtabmap_2d_nav.rviz
navrover_simulation/: CMakeLists.txt  package.xml
navrover_simulation/launch/: display.launch  gmapping.launch  octomap.launch  urdf.rviz
navrover_simulation/rviz/: 2d_mapping.rviz
nights_and_weekends_s5/: model.config
octomap_mapping_navrover/octomap_server/launch/: octomap_mapping.launch
src/navrover_control/config/: rover_control.yaml
src/navrover_description/urdf/: kinect_sensor.xacro
src/navrover_gazebo/launch/: rtabmap_world.launch
src/navrover_gazebo/models/rtab_enclosure/: model.config
src/navrover_navigation/config/: DWA_base_local_params.yaml  DWA_local_planner_params.yaml  base_local_planner_params.yaml  costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  move_base.yaml  recovery_behaviors.yaml
src/navrover_navigation/launch/: map_loader.launch  octomap_nav.launch
src/navrover_navigation/maps/: first_map.yaml  map.pgm  nights_and_weekends_s5.pgm
src/navrover_navigation/maps/octomaps/: teleop.ot
src/navrover_navigation/rviz/: test.rviz
src/navrover_rtab_package/: package.xml
src/navrover_rtab_package/launch/: rtabmap.launch  rtabmap_2d_nav.launch  rtabmap_mapping.launch
src/navrover_rtab_package/maps/: rtabmap.yaml
src/navrover_rtab_package/rviz/: rtab_mapping.rviz  rtabmap_mapping.rviz
src/navrover_simulation/: package.xml
src/navrover_simulation/launch/: 2d_mapping.launch  display.launch  gazebo.launch  gmapping.launch  octomap.launch  urdf.rviz
src/navrover_simulation/models/nights_and_weekends_s5/: model.sdf
src/navrover_simulation/models/nights_and_weekends_s5/meshes/: nights_and_weekends_s5.dae
src/navrover_simulation/models/rtab_enclosure/: model.sdf
src/navrover_simulation/rviz/: 2d_mapping.rviz  octomap.rviz
src/navrover_simulation/urdf/: kinect_sensor.xacro  rover.gazebo  rover.xacro
src/navrover_simulation/worlds/: nights_and_weekends_s5.world  rtabmap.world  teleop.world  test.world
