<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>navrover_control</name>
    <version>0.0.0</version>
    <description>The navrover_control package</description>

    <maintainer email="joelgj02@gmail.com">Joel G.J</maintainer>
    <license>TODO: License declaration</license>
    
    <buildtool_depend>ament_cmake</buildtool_depend>

    <depend>gz_sim_vendor</depend>
    <depend>gz_plugin_vendor</depend>
    
    <depend>pluginlib</depend>
    <depend>rclcpp</depend>
    <depend>yaml_cpp_vendor</depend>
    <depend>rclcpp_lifecycle</depend>
    <depend>hardware_interface</depend>
    <depend>controller_manager</depend>

    <depend>gz_ros2_control</depend>
    <depend>ros_gz_sim</depend>
    <depend>ros_gz_bridge</depend>
    <depend>effort_controllers</depend>
    <depend>position_controllers</depend>

    <test_depend>ament_lint_auto</test_depend>
    <test_depend>ament_lint_common</test_depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>

    
    
    
